@@ -1,5 +1,6 @@
 7.6.0
   - Constraint checking tool.
+  - Fix for "#23 Bugs when exporting timestamps and JSON ", https://sourceforge.net/p/jailer/bugs/23/
   - Minor GUI Improvements and bug fixes.
 
 7.5.10
